# ssn-esp32

./: Cargo.toml  flash_riscv32imc.sh
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: adc_reader.rs  aht21.rs  bmp.rs  bmp180.rs  commons.rs  ens160.rs  main.rs  mqtt_messages.rs  settings.rs  ssn_wifi.rs  ssndevices.rs  utils.rs  wifi.rs
