[package]
name = "ssn-esp32"
version = "0.1.0"
authors = ["Ernold <ericv@mail.ru>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ssn-esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow      = "=1.0.97"
embedded-svc = "=0.28.1"
esp-idf-svc = { version = "=0.51.0" }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
esp-idf-hal = "0.45.2" # For GPIO, I2C, and delay functionality
embedded-hal = "1.0.0" # For I2C traitscargo espflash flash
toml-cfg      = "=0.2.0"
# rumqttc = { version ="0.24.0" } # For MQTT communication
# tokio = { version = "1", features = ["full"] } # For async runtime
bmp180-driver = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "=2.0.1" } # For binary serialization
smart-leds = "*"
ws2812-esp32-rmt-driver = { version = "0.12.0", features = ["smart-leds-trait"] }

# [dependencies.smart-leds-trait]
# optional = true
# version = "0.3"

[build-dependencies]
embuild = "0.33"
[package.metadata.esp-idf]
target = "esp32c3"